--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
+  "C_Cpp.errorSquiggles": "enabled",
+  "files.associations": {
+      "iostream": "cpp",
+      "ostream": "cpp"
+  },
   "editor.tabSize": 4
 }
